fixed results div covering up nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ section {
   height: 275px;
   margin-top: 30px;
   margin-left: 30px;
+  cursor: pointer;
 }
 
 .image-holder img {
@@ -107,12 +108,14 @@ section {
 
 #results-field {
   position: absolute;
-  top: 0;
   visibility: hidden;
-  margin: 0 auto;
+  height: 340px;
+  width: 100%;
+  top: 0;
+  margin-top: 200px;
 }
 
 #chart {
-  margin-top: 550px;
+  margin-top: 350px;
   margin-left: 200px;
 }
